--- a/ClientSide/src/app/menu/menu.component.css
+++ b/ClientSide/src/app/menu/menu.component.css
@@ -2,7 +2,67 @@
     background-color: var(--tsi-blue-transparent);
     width: 100%;
     height: 100%;
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
 .menu img {
     width: 100%;
+    margin-bottom: 24px;
+}
+.menu nav {
+    text-align: center;
+    font-size: 18px;
+    
+    display: flex;
+    flex-direction: column;
+}
+.menu a {
+    transition-duration: 600ms;
+    transition-property: background-color, box-shadow, text-shadow, content, padding;
+} 
+.menu nav a {
+    display: block;
+    padding: 14px;
+    text-decoration: none;
+    color: var(--tsi-white);
+}
+.menu nav a:hover,
+.menu .menu-languages a:hover {
+    background-color: var(--tsi-blue);
+    text-shadow: 3px 3px var(--tsi-blue-dark);
+    
+    box-shadow: -10px 0px 20px 10px var(--tsi-blue-transparent);
+}
+.menu nav a:hover:before {
+    content: '[';
+}
+.menu nav a:hover:after {
+    content: ']';
+}
+.menu a.selected {
+    background-color: var(--tsi-blue-dark) !important;
+    font-weight: bold;
+}
+
+
+.menu-languages {
+    margin: 24px;
+}
+.menu-languages a {
+    color: var(--tsi-white);
+    display: inline-block;
+
+    cursor: pointer;
+    padding: 14px;
+    margin-right: 14px;
+    border-radius: 8px;
+    border: 2px var(--tsi-white) solid;
 }
