--- a/ClientSide/src/app/pages/home/home.component.html
+++ b/ClientSide/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
-<p>
-  home works!
-</p>
+<h1>{{ 'HOME.HELLO_MESSAGE' | translate }}</h1>
+
+<p>Curent date-time: 10/02/2020 12:04</p>
+
+<p>Online users count: 1</p>
+
