--- a/ClientSide/src/styles.css
+++ b/ClientSide/src/styles.css
@@ -1,7 +1,10 @@
 :root {
     --tsi-blue: #144774;
     --tsi-blue-transparent: rgba(20, 71, 116, 0.8);
-    
+
+    --tsi-blue-dark: #113c61;
+
+    --tsi-white: #e0e0e0;
 }
 
 html {
