Add cors, angular material, faculties grid, services

--- a/ClientSide/src/app/app.component.css
+++ b/ClientSide/src/app/app.component.css
@@ -24,3 +24,12 @@
         grid-template-columns: 320px calc(100% - 320px);
     }
 }
+
+.loading-pannel {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+.loading-pannel mat-progress-spinner {
+    margin: auto;
+}
