--- a/ClientSide/src/app/app.component.html
+++ b/ClientSide/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="content-container">
   <div>
-      <app-menu></app-menu>
+    <div class="menu-container">
+      <app-menu></app-menu></div>
   </div>
   <div style="margin: 15px;">
     <div [hidden]="page.showLoading">
