--- a/ClientSide/src/app/pages/faculties/faculties-list/faculties-list.component.html
+++ b/ClientSide/src/app/pages/faculties/faculties-list/faculties-list.component.html
@@ -5,31 +5,39 @@
 
 <button mat-raised-button color="primary" (click)="methods.addNew()">
   <mat-icon>add</mat-icon>
-  <span> {{ 'COMMON.ADD_NEW' | translate }} </span>
+  <span> {{ 'COMMON.ADD' | translate }} </span>
 </button>
 
 <div class="facultiesTable">
+
+  <mat-form-field class="w50pct">
+    <mat-label>{{ 'COMMON.FILTER' | translate }}</mat-label>
+    <input matInput (keyup)="methods.applyFilter($event)" >
+  </mat-form-field>
+
   <table mat-table [dataSource]="dataSources.faculties" matSort>
 
     <ng-container matColumnDef="code">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="w10pct"> Code </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="w10pct"> {{ 'FACULTY.CODE' | translate }} </th>
       <td mat-cell *matCellDef="let row" > {{row.code}} </td>
     </ng-container>
 
     <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="w60pct"> Title </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="w60pct"> {{ 'FACULTY.TITLE' | translate }} </th>
       <td mat-cell *matCellDef="let row"> {{row.title}} </td>
     </ng-container>
     
     <ng-container matColumnDef="studyProgrammeCount">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="w20pct"> Study programme count </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="w20pct"> {{ 'FACULTY.STUDY_PROGRMME_COUNT' | translate }} </th>
       <td mat-cell *matCellDef="let row" > {{row.studyProgrammeCount}} </td>
     </ng-container>
 
     
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header class="w10pct"> Actions </th>
-      <td mat-cell *matCellDef="let row" > Edit </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="w10pct"> {{ 'COMMON.ACTIONS' | translate }} </th>
+      <td mat-cell *matCellDef="let row" >
+        <button mat-button color="primary" (click)="methods.edit(row.id)">{{ 'COMMON.EDIT' | translate }}</button>
+      </td>
     </ng-container>
     
     <tr mat-header-row *matHeaderRowDef="dataSources.displayedColumns"></tr>
