Student logic on backend and client Notifications, styles, e.t.c.

--- a/ClientSide/src/app/pages/faculties/faculty-form/study-programme-popup/study-programme-popup.component.html
+++ b/ClientSide/src/app/pages/faculties/faculty-form/study-programme-popup/study-programme-popup.component.html
@@ -1,4 +1,4 @@
-<div class="study-programm-form" mat-dialog-content>
+<div class="data-form" mat-dialog-content>
     <mat-form-field>
       <mat-label>Code</mat-label>
       <input required matInput [(ngModel)]="data.code">
