--- a/ClientSide/src/app/app.component.html
+++ b/ClientSide/src/app/app.component.html
@@ -6,6 +6,7 @@
   <div style="margin: 15px;">
     <div [hidden]="page.showLoading">
       <router-outlet></router-outlet>
+      <app-notification></app-notification>
     </div>
     <div *ngIf="page.showLoading" class="loading-pannel">
       <mat-progress-spinner
