--- a/ClientSide/src/app/pages/faculties/faculty-form/faculty-form.component.html
+++ b/ClientSide/src/app/pages/faculties/faculty-form/faculty-form.component.html
@@ -4,39 +4,39 @@
   <ng-template #name>{{ 'FACULTY.FACULTY' | translate }} {{ page.faculty.code}}</ng-template>
 </h1>
 
-<div class="faculty-form" *ngIf="page.faculty != null">
-  <mat-form-field>
+<div class="m20t data-form" *ngIf="page.faculty != null">
+  <mat-form-field class="short-field">
     <mat-label>{{ 'FACULTY.CODE' | translate }}</mat-label>
     <input required matInput [(ngModel)]="page.faculty.code">
   </mat-form-field>
 
-  <mat-form-field>
+  <mat-form-field class="long-field">
     <mat-label>{{ 'FACULTY.TITLE' | translate }} (EN)</mat-label>
     <input required matInput [(ngModel)]="page.faculty.titleEn">
   </mat-form-field>
 
-  <mat-form-field>
+  <mat-form-field class="long-field">
     <mat-label>{{ 'FACULTY.TITLE' | translate }} (LV)</mat-label>
     <input required matInput [(ngModel)]="page.faculty.titleLv">
   </mat-form-field>
 
-  <mat-form-field>
+  <mat-form-field class="long-field">
     <mat-label>{{ 'FACULTY.TITLE' | translate }} (RU)</mat-label>
     <input required matInput [(ngModel)]="page.faculty.titleRu">
   </mat-form-field>
 
 
-  <mat-form-field>
+  <mat-form-field class="medium-field">
     <mat-label>{{ 'FACULTY.SHORT_TITLE' | translate }} (EN)</mat-label>
     <input required matInput [(ngModel)]="page.faculty.shortTitleEn">
   </mat-form-field>
 
-  <mat-form-field>
+  <mat-form-field class="medium-field">
     <mat-label>{{ 'FACULTY.SHORT_TITLE' | translate }} (LV)</mat-label>
     <input required matInput [(ngModel)]="page.faculty.shortTitleLv">
   </mat-form-field>
 
-  <mat-form-field>
+  <mat-form-field class="medium-field">
     <mat-label>{{ 'FACULTY.SHORT_TITLE' | translate }} (RU)</mat-label>
     <input required matInput [(ngModel)]="page.faculty.shortTitleRu">
   </mat-form-field>
