--- a/ClientSide/src/app/pages/faculties/faculty-form/faculty-form.component.html
+++ b/ClientSide/src/app/pages/faculties/faculty-form/faculty-form.component.html
@@ -74,7 +74,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="w20pct"> {{ 'COMMON.ACTIONS' | translate }} </th>
         <td mat-cell *matCellDef="let row" >
           <button mat-button color="primary" (click)="methods.editStudyProgramme(row)">{{ 'COMMON.EDIT' | translate }}</button>
-          <button mat-button color="warn" (click)="methods.deleteStudyProgramme(row.id)">{{ 'COMMON.DELETE' | translate }}</button>
+          <button mat-button color="warn" (click)="methods.deleteStudyProgramme(row.id)" [disabled]="row.studentsCount != 0">{{ 'COMMON.DELETE' | translate }}</button>
         </td>
       </ng-container>
       
