--- a/ClientSide/src/app/pages/students/students-list/students-list.component.html
+++ b/ClientSide/src/app/pages/students/students-list/students-list.component.html
@@ -15,7 +15,7 @@
     <input matInput (keyup)="methods.applyFilter($event)" >
   </mat-form-field>
 
-  <table mat-table [dataSource]="dataSources.students" matSort class="w100pct">
+  <table mat-table [dataSource]="dataSources.sortedStudents" matSort class="w100pct" (matSortChange)="methods.sortData($event)">
 
     <ng-container matColumnDef="code">
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="w10pct"> {{ 'STUDENT.CODE' | translate }} </th>
