--- a/ClientSide/src/app/pages/faculties/faculty-form/faculty-form.component.html
+++ b/ClientSide/src/app/pages/faculties/faculty-form/faculty-form.component.html
@@ -58,16 +58,16 @@
       <input matInput (keyup)="methods.applyStudyProgrammeFilter($event)">
     </mat-form-field>
   
-    <table mat-table [dataSource]="dataSources.studyProgrammes" matSort class="w100pct">
+    <table mat-table [dataSource]="dataSources.sortedStudyProgrammes" matSort class="w100pct" (matSortChange)="methods.sortData($event)">
   
       <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef mat-sort-header class="w20pct"> {{ 'STUDY_PROGRAMMES.CODE' | translate }} </th>
         <td mat-cell *matCellDef="let row" > {{row.code}} </td>
       </ng-container>
   
-      <ng-container matColumnDef="titleEn">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="w60pct"> {{ 'STUDY_PROGRAMMES.TITLE' | translate }} (EN) </th>
-        <td mat-cell *matCellDef="let row"> {{row.titleEn}} </td>
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="w60pct"> {{ 'STUDY_PROGRAMMES.TITLE' | translate }} </th>
+        <td mat-cell *matCellDef="let row"> {{ methods.translateTitle(row) }} </td>
       </ng-container>
       
       <ng-container matColumnDef="actions">
@@ -78,8 +78,8 @@
         </td>
       </ng-container>
       
-      <tr mat-header-row *matHeaderRowDef="['code', 'titleEn', 'actions']"></tr>
-        <tr mat-row *matRowDef="let row; columns: ['code', 'titleEn', 'actions'];">
+      <tr mat-header-row *matHeaderRowDef="['code', 'title', 'actions']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['code', 'title', 'actions'];">
       </tr>
     </table>
     <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]"></mat-paginator>
