--- a/ClientSide/src/app/common/components/notification/notification.component.css
+++ b/ClientSide/src/app/common/components/notification/notification.component.css
@@ -37,6 +37,10 @@
     }
 }
 
+#app-notification.login-notification {
+    left: 15px !important;
+}
+
 #app-notification.show {
     visibility: visible;
     bottom: 15px;
