--- a/ClientSide/src/app/menu/menu.component.html
+++ b/ClientSide/src/app/menu/menu.component.html
@@ -17,5 +17,8 @@
       (click)="methods.changeLanguage(languageItem.code)">
       {{ languageItem.label }}
     </a>
+    <a class="logout" (click)="methods.logout()">
+      <mat-icon>exit_to_app</mat-icon>
+    </a>
   </div>
 </div>
