--- a/ClientSide/src/app/menu/menu.component.css
+++ b/ClientSide/src/app/menu/menu.component.css
@@ -55,6 +55,7 @@
 
 .menu-languages {
     margin: 24px;
+    display: flex;
 }
 .menu-languages a {
     color: var(--tsi-white);
@@ -63,6 +64,12 @@
     cursor: pointer;
     padding: 14px;
     margin-right: 14px;
+    margin-top: 10px;
     border-radius: 8px;
     border: 2px var(--tsi-white) solid;
+}
+.menu-languages a.logout {
+    margin-left: auto;
+    margin-right: 0px;
+    padding: 10px;
 }
