Auhorization improvements and student attendance statistics

--- a/ClientSide/src/app/pages/authorization/authorization.component.html
+++ b/ClientSide/src/app/pages/authorization/authorization.component.html
@@ -3,7 +3,7 @@
   <div class="data-form">
     <mat-form-field>
       <mat-label>{{ 'AUTHORIZATION.LOGIN' | translate }}</mat-label>
-      <input required matInput [(ngModel)]="page.authorizationModel.login">
+      <input required matInput [(ngModel)]="page.authorizationModel.login" autocomplete="off">
     </mat-form-field>
 
     <mat-form-field>
