--- a/ClientSide/src/app/menu/menu.component.css
+++ b/ClientSide/src/app/menu/menu.component.css
@@ -56,6 +56,7 @@
 .menu-languages {
     margin: 24px;
     display: flex;
+    flex-wrap: wrap;
 }
 .menu-languages a {
     color: var(--tsi-white);
@@ -70,6 +71,6 @@
 }
 .menu-languages a.logout {
     margin-left: auto;
-    margin-right: 0px;
     padding: 10px;
+    margin-right: 0px;
 }
