--- a/ClientSide/src/app/pages/students/students-list/students-list.component.html
+++ b/ClientSide/src/app/pages/students/students-list/students-list.component.html
@@ -3,7 +3,7 @@
   {{ 'HEADERS.STUDENTS' | translate }}
 </h1>
 
-<button mat-raised-button color="primary" (click)="methods.addNew()">
+<button mat-raised-button color="primary" (click)="methods.addNew()" *ngIf="page.showStudentEdit">
   <mat-icon>add</mat-icon>
   <span> {{ 'COMMON.ADD' | translate }} </span>
 </button>
@@ -51,7 +51,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef mat-sort-header class="w20pct"> {{ 'COMMON.ACTIONS' | translate }} </th>
       <td mat-cell *matCellDef="let row" >
-        <button mat-button color="primary" (click)="methods.edit(row.id)">{{ 'COMMON.EDIT' | translate }}</button>
+        <button mat-button color="primary" (click)="methods.edit(row.id)" *ngIf="page.showStudentEdit">{{ 'COMMON.EDIT' | translate }}</button>
         <button mat-button color="primary" (click)="methods.goToAttendance(row.id)">{{ 'STUDENT.ATTENDANCE' | translate }}</button>
       </td>
     </ng-container>
