Full notification implementations

--- a/ClientSide/src/app/common/components/areYouSurePopup/areYouSurePopup.component.html
+++ b/ClientSide/src/app/common/components/areYouSurePopup/areYouSurePopup.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-content>
-  <p>{{ 'COMMON.ARE_YOU_SURE' }}</p>
+  <p>{{ 'COMMON.ARE_YOU_SURE' | translate }}</p>
 </div>
 <div mat-dialog-actions>
   <button mat-raised-button color="primary" mat-button [mat-dialog-close]="true" cdkFocusInitial>
