Fixes and improvements

--- a/ClientSide/src/app/pages/seeOwnAttendance/seeOwnAttendance.component.html
+++ b/ClientSide/src/app/pages/seeOwnAttendance/seeOwnAttendance.component.html
@@ -45,7 +45,7 @@
     {{ 'SEE_OWN_ATTENDANCE.ATTENDANCE_SUMMARY_BY_DAYS' | translate }}
   </h3>
   <canvas baseChart
-    chartType="line"
+    chartType="bar"
     [legend]="false"
     [colors]="options.tsiColor"
     [options]="options.lineChartOptions"
@@ -68,7 +68,7 @@
   </div>
   <canvas 
     baseChart
-    chartType="line"
+    chartType="bar"
     [legend]="false"
     [colors]="options.tsiColor"
     [options]="options.lineChartOptions"
